# pyiec61850

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheel.yml
patches/: iec61850.i.patch
