[build-system]
requires = ["setuptools>=45", "wheel", "docker"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for these Python versions
build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Skip 32-bit builds and platforms we don't support yet
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*", "pp*"]

# Only build for x86_64 on Linux for now
archs = ["x86_64"]

# Environment variables
environment = { LIBIEC61850_VERSION = "v1.6" }

# Use our custom Docker build process for Linux
before-build = "python setup.py build_ext"

# Test that the wheel works
test-command = "python -c 'import pyiec61850; print(\"Import successful\")'"